--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chalk": "^5.4.1",
     "mineflayer": "^4.25.0",
     "mineflayer-pathfinder": "^2.4.5",
     "prismarine-viewer": "^1.28.0"
