--- a/config.json
+++ b/config.json
@@ -34,7 +34,7 @@
       "password": "poocha"
     },
     {
-      "username": "hollowkight",
+      "username": "hollowknight",
       "password": "poocha"
     },    {
       "username": "Susdog",
