--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.8.3",
     "chalk": "^5.4.1",
+    "discord.js": "^14.18.0",
+    "dotenv": "^16.4.7",
     "mineflayer": "^4.25.0",
     "mineflayer-pathfinder": "^2.4.5",
     "prismarine-viewer": "^1.28.0"
