--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,32 @@
-node_modules
+# Node modules
+node_modules/
+
+# Environment variables
+.env
+
+# Secure configuration
+secure_config.json
+
+# Cache files
+cache.json
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS files
+.DS_Store
+Thumbs.db
