--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
-  "name": "bot",
+  "name": "abu-bot",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["minecraft", "bot", "automation"],
+  "author": "safder2000",
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/safder2000/abu_05.git"
+  },
   "dependencies": {
     "axios": "^1.8.3",
     "chalk": "^5.4.1",
@@ -17,7 +22,7 @@
     "mineflayer-pathfinder": "^2.4.5",
     "prismarine-viewer": "^1.28.0"
   },
-  "description": "",
+  "description": "A Minecraft bot manager for automating farm tasks",
   "devDependencies": {
     "eslint": "^9.20.1",
     "prettier": "^3.5.1"
