--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,1 @@
-# Node modules
-node_modules/
-
-# Environment variables
-.env
-
-# Secure configuration
-secure_config.json
-
-# Cache files
-cache.json
-
-# Logs
-logs/
-*.log
-npm-debug.log*
-
-# Runtime data
-pids
-*.pid
-*.seed
-*.pid.lock
-
-# IDE files
-.vscode/
-.idea/
-*.swp
-*.swo
-
-# OS files
-.DS_Store
-Thumbs.db
+node_modules
