--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
   "serverAddress": "mallulifesteal.fun",
   "port": 25565,
   "version": "1.20.1",
-  "whitelist": ["__Lnzz__", "hollowknight", "Susdog","SusPoocha"],
+  "whitelist": ["__Lnzz__", "hollowknight", "Susdog","SusPoocha","No_one123456778","Blueeye1","Sibin1","marvo"],
   "commandPassword": "malare",
   "accounts": [
     {
